Clean-up and test fixes