@@ -24,6 +24,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += '--enable-preview'
+    jvmArgs += '-XX:+EnableDynamicAgentLoading'
 }
 
 application {
@@ -48,4 +50,9 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(JavaExec) {
     jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+
 }
